--- a/css/test.css
+++ b/css/test.css
@@ -70,7 +70,7 @@ ul {
   visibility: hidden;
 }
 
-@media screen and (max-height: 800px) {
+@media screen and (max-height: 600px) {
 
   .sidenav {padding-top: 15px;
    width: 0;
@@ -209,9 +209,10 @@ nav ul li:nth-child(12) a:before {
 
 main {
   flex: 1;
+height:100%;
   padding: 25px;
   background: #f5f5f5;
-  height: fit-content;
+  
   position: relative
 }
 
